new logo update, in the middle of a light site redesign

--- a/public/help.html
+++ b/public/help.html
@@ -2,49 +2,43 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" type="image/png" href="/assets/star-outline.png" />
-  <title>Glance Back</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" type="image/png" href="/assets/glanceback_star.png" />
+    <title>GLANCE BACK</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <div class="container">
-    <a href="/"> <img src="../assets/logo.png"
-        alt="Hand drawn image of a computer with an eye looking out. The words glance back surround the eye."
-        class="logo" id="glanceback-logo" />
-    </a>
-    <br>
-    <div class="copy">
-      <div class="qa">
-        <p class="question">
-          Q: My camera is not working... it says there is an error accessing the readable stream or it seems to be
-          using snap camera, etc. How do I fix this?
-        </p>
+    <div class="container">
+        <a href="/"> <img src="../assets/logo/final_white.png" alt="Hand drawn image of a computer with an eye looking out. The words glance back surround the eye." class="logo" id="glanceback-logo" />
+        </a>
         <br>
-        <p class="answer">A: Try going to <span
-            href="chrome://settings/content/camera?search=camera">chrome://settings/content/camera?search=camera</span>
-          in your Chrome browser you
-          should see an
-          option to select your default camera (see the screenshot below). Then, you should hopefully be able to
-          select which camera you would like the extension to use. My default on a Macbook, the one I want Glance Back
-          to use, is the FaceTime HD Camera.</p>
-        <img src="../assets/help/select_camera.png" alt="">
-      </div>
+        <div class="copy">
+            FAQ
+            <div class="qa">
+                <p class="question">
+                    Q: My camera is not working... it says there is an error accessing the readable stream or it seems to be using snap camera, etc. How do I fix this?
+                </p>
+                <br>
+                <p class="answer">A: Try going to <span href="chrome://settings/content/camera?search=camera">chrome://settings/content/camera?search=camera</span> in your Chrome browser you should see an option to select your default camera (see the screenshot below).
+                    Then, you should hopefully be able to select which camera you would like the extension to use. My default on a Macbook, the one I want Glance Back to use, is the FaceTime HD Camera.</p>
+                <img src="../assets/help/select_camera.png" alt="">
+            </div>
 
-      <div class="qa">
-        <p class="question">
-          Q: Why has it not taken any photos yet?
-        </p>
-        <br>
-        <p class="answer">A: Glance Back takes a photo once a day at random when you open a new tab, but there may be some days that it never takes a photo. If you just installed the extension, give it at least a week and make sure you are opening new tabs every day. It may be that the timing is not working out, and you and Glance Back keep having missed connections : ( Otherwise, not sure why!!!!!</p>
-      </div>
+            <div class="qa">
+                <p class="question">
+                    Q: Why has it not taken any photos yet?
+                </p>
+                <br>
+                <p class="answer">A: Glance Back takes a photo once a day at random when you open a new tab, but there may be some days that it never takes a photo. If you just installed the extension, give it at least a week and make sure you are opening new tabs every
+                    day. It may be that the timing is not working out, and you and Glance Back keep having missed connections : ( Otherwise, not sure why!!!!!</p>
+            </div>
+        </div>
+
+
     </div>
-
-
-  </div>
-  </div>
-  </div>
+    </div>
+    </div>
 </body>
 
 </html>
