--- a/public/index.html
+++ b/public/index.html
@@ -2,113 +2,92 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" type="image/png" href="/assets/star-outline.png" />
-  <title>🎀  𝒢𝓁𝒶𝓃𝒸𝑒 𝐵𝒶𝒸𝓀  🎀</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" type="image/png" href="/assets/glanceback_star.png" />
+    <title>GLANCE BACK</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <div class="container">
-    <!-- <div id="covid-container">
-      <a href="./notefromhome/"> Hi, weird time we're in right now.
-        Sending ~~~good energy~~~ to you through this screen. </a>
-    </div> -->
+    <div class="container">
+        <a href="/"> <img src="../assets/logo/final_white.png" alt="Hand drawn image of a computer with an eye looking out. The words glance back surround the eye." class="logo" id="glanceback-logo" />
+        </a>
 
-    <a href="/"> <img src="../assets/logo.png"
-        alt="Hand drawn image of a computer with an eye looking out. The words glance back surround the eye."
-        class="logo" id="glanceback-logo" />
-    </a>
-
-    <!-- <img src="/assets/reel.gif" alt="" id="reel" /> -->
-
-    <video autoplay loop muted playsinline id="reel">
+        <video autoplay loop muted playsinline id="reel">
       <source src="/assets/glanceback_2021.mp4" type="video/mp4">
     </video>
 
-    <div id="intro-text">Doesn't your computer deserve a chance to glance back @ you?<br /></div>
+        <br>
 
-    <div id="extension-link-container">
+        <div class="intro">
+            Glance Back is a daily photo diary, capturing the moments shared between you and your computer.
+        </div>
+
+        <br><br><br>
+
+        <a id="extension-link" href="https://chrome.google.com/webstore/detail/glance-back/hgickafobcmcfffbjiamhhejkockfccm" target="_blank">
+      GET THE EXTENSION
+    </a>
+
+        <br><br>
+
+        <!-- <div id="intro-text">DOESN'T UR COMPUTER DESERVE A CHANCE TO <br> GLANCE BACK AT U?<br /></div> -->
+
+        <!-- <div id="extension-link-container">
       <div>
         ☆ﾟ･｡･:*:･ﾟ★,｡･:*:･ﾟ☆｡･:*:･ﾟ★,｡･:*:･ﾟ☆
       </div>
-      <!-- <img src="/assets/rays.png" alt="" class="" id="link-border"> -->
       ☆ﾟ･｡･:*:･ﾟ★ <a id="extension-link"
         href="https://chrome.google.com/webstore/detail/glance-back/hgickafobcmcfffbjiamhhejkockfccm"
-        target="_blank"> 🎀 GET THE EXTENSION!!! 🎀 
+        target="_blank"> GET THE EXTENSION!!!
       </a> ★,｡･:*:･ﾟ☆
       <div>
         ☆ﾟ･｡･:*:･ﾟ★,｡･:*:･ﾟ☆｡･:*:･ﾟ★,｡･:*:･ﾟ☆
       </div>
-    </div>
+    </div> -->
 
-    <div class="copy">
-      Glance Back is a daily photo diary, capturing the moments shared between you and your computer. Once a day,
-      when you open a new tab, Glance Back will unexpectedly
-      take your photo, ask you what you’re thinking about, and save both
-      the photo and written thought to its locally stored archive.
-      <br />
-      <br />
+        <div class="copy">
+
+            <!--       
       <div class="section-break">
-        <!-- <img src="/assets/squiggle.png" alt="" class="squiggle" id="squiggle"> -->
         ★ ★ ★
-      </div>
-      <br />
-      You know that feeling when someone is staring at you for a really
-      long time? It’s super uncomfortable right? Especially if this gaze
-      is unreciprocated. Glance Back grew out of a desire to recognize
-      that this phenomenon occurs between ourselves and our machines when
-      we spend so much time looking at our screen. <br />
-      <br />
-      With this chrome extension, once a day at random when you open a new
-      tab, Glance Back will quickly snap a photo of you and inquire: “What
-      are you thinking about?”. Once you type your answer and press enter,
-      the photo and thought will be collectively saved to your history of
-      glances, cumulatively creating an archive of moments you share with
-      your screen. Given that most of the digital photos we generate of
-      ourselves today are highly curated (i.e.
-      <i>
+      </div> -->
+            <br /> You know that feeling when someone is staring at you for a really long time? It’s super uncomfortable right? Especially if this gaze is unreciprocated. Glance Back grew out of a desire to recognize that this phenomenon occurs between
+            ourselves and our machines when we spend so much time looking at our screen. <br />
+            <br /> With this chrome extension, once a day at random when you open a new tab, Glance Back will quickly snap a photo of you and inquire: “What are you thinking about?”. Once you type your answer and press enter, the photo and thought will
+            be collectively saved to your history of glances, cumulatively creating an archive of moments you share with your screen. Given that most of the digital photos we generate of ourselves today are highly curated (i.e.
+            <i>
         wait let me fix my hair and smile and please take at least 10
-        photos just to make sure there’s a good one!</i>), Glance Back also acts as an antidote to this attitude
-      by
-      providing you with unexpected and often… unflattering… photos of
-      yourself. <br />
-      <br />
+        photos just to make sure there’s a good one!</i>), Glance Back also acts as an antidote to this attitude by providing you with unexpected and often… unflattering… photos of yourself. <br />
+            <br /> It’s important to note that all of the photos are saved to your browser’s local storage. This means that they never leave your machine. This is a collection shared purely between you and your computer. If you want the photos for yourself,
+            you can choose to download them under the settings tab in the top right. You can also delete photos from the archive and choose whether the extension requires you to write a caption or not. <br />
+            <br /> When using our devices, we’re pulled into and solely focused on the glowing world that exists on the screen. We lose both an awareness of self and of the real world context surrounding us. This extension aims to disrupt that trance
+            and remind you that you are here and your computer is there and you are just staring at it and... wow is that really what I look like right now?<br />
+            <br />
+            <img src="/assets/question.png" alt="" id="" class="screengrab" />
+            <img src="/assets/gallery.png" alt="" id="" class="screengrab" /> Glance Back is a project by
+            <a href="https://mayaontheinter.net" target="_blank">Maya Man</a>
+            <br> Logo design by
+            <a href="https://sonjabriney.com/" target="_blank">Sonja Briney</a>
+            <br>
 
-      It’s important to note that all of the photos are saved to your
-      browser’s local storage. This means that they never leave your
-      machine. This is a collection shared purely between you and your
-      computer. If you want the photos for yourself, you can choose to
-      download them under the settings tab in the top right. You can also
-      delete photos from the archive and choose whether the extension
-      requires you to write a caption or not. <br />
-      <br />
-      When using our devices, we’re pulled into and solely focused on the
-      glowing world that exists on the screen. We lose both an awareness
-      of self and of the real world context surrounding us. This extension
-      aims to disrupt that trance and remind you that you are here and
-      your computer is there and you are just staring at it and... wow is
-      that really what I look like right now?<br />
-      <br />
-      See other people's Glance Backs they have shared <a target="_blank"
-        href="https://www.are.na/maya-man/people-using-glance-back">here</a>.
-      <img src="/assets/question.png" alt="" id="" class="screengrab" />
-      <img src="/assets/gallery.png" alt="" id="" class="screengrab" />
-      Glance Back is a project by
-      <a href="https://mayaontheinter.net" target="_blank">Maya Man</a> ★
-      <br><p>⚜｡꘏꘏ 𝑗𝑜𝑖𝑛 𝑢𝑠 ♡ (⚗ ˘ ⚗) ꘏꘏｡⚜</p>
-      <br>
-      <br>
-      <br>
-      <div id="help">
-        <a href="/help.html">Running into an issue? Read the FAQ here.</a>
-      </div>
+            <br>
+            <br>
+            <div>
+                <a target="_blank" href="https://www.are.na/maya-man/people-using-glance-back">See other people's Glance
+          Backs they have shared here.</a>
+                <p>⚜｡꘏꘏ 𝑗𝑜𝑖𝑛 𝑢𝑠 ♡ (⚗ ˘ ⚗) ꘏꘏｡⚜</p>
+            </div>
+            <br>
+            <div id="help">
+                <a href="/help.html">Running into an issue? Read the FAQ here.</a>
+            </div>
+
+        </div>
 
     </div>
 
-  </div>
-
-  </div>
+    </div>
 </body>
 
 </html>
